[tool.poetry]
name = "pubmed-paper-fetcher"
version = "0.1.0"
description = ""
authors = ["Hashik <hashikdinesh@gmail.com>"]
readme = "README.md"
packages = [
    { include = "pubmed_fetcher" }
]

[tool.poetry.dependencies]
python = ">=3.13"
requests = "^2.32.4"
pandas = "^2.3.1"

[tool.poetry.scripts]
get-papers-list = "pubmed_fetcher.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"